# RecetteDHistoire

./: LISEZMOI.md  NOTES.md  README.md  ÀFAIRE.md
collections/: belles_histoires.rdhist
noeuds_menus/: belles_histoires.rdhist
rdhist/: Cargo.toml
rdhist/src/: lib.rs  main.rs
rdhist/src/rdappareils/: mod.rs  raconteur_palette.rs  usb_generique.rs
rdhist/src/rdimage/: mod.rs
rdhist/src/rdmain/: ingredients.rs  mod.rs  noeud_menu.rs  rdhistcaprice.rs  rdhistcli.rs  rdhisthelper.rs  rdhisthint.rs  recette.rs  test_ingredients.rs  test_rdmain.rs  test_recette.rs
rdhist/src/rdsound/: cdaudio.rs  mod.rs  test_cdaudio.rs
recettes/belles_histoires/: 2019_07_Un_voyage_extraordinaire.rdhist  2022_03_enquete_a_l_ecole.rdhist  2022_10_le_fantome_du_manoir.rdhist
recettes/belles_histoires_pomme_dapi/: 2019_07_Un_voyage_extraordinaire.rdhist  2019_07_Un_voyage_extraordinaire.rdist
recettes/grande_histoire_pomme_dapi/: 2019_07_Un_voyage_extraordinaire.rdist  2021_04_Lili_et_la_graine_magique.rdhist  2021_04_Lili_et_la_graine_magique.rdist
recettes/mes_premiers_j_aime_lire/: 2022_02_Tiens_bon_petite_panthere.rdhist
