[package]
name = "rdhist"
version = "0.1.0"
authors = ["Fabien Marteau <mail@fabienm.eu>"]
edition = "2018"

[dependencies]
image = "*"
itertools = "*"
clap = "3.0.5"
dirs = "4.0"
main_error = "0.1.1"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
rustyline = "9.1.2"
#ffmpeg = "*"
