[package]
name = "rdhist"
version = "0.1.0"
authors = ["Fabien Marteau <mail@fabienm.eu>"]
edition = "2018"

[dependencies]
getopts = "0.2"
image = "*"
itertools = "*"
clap = "3.0.5"
dirs = "4.0"
reqwest = { version = "0.11.3", features = ["stream", "blocking"] }
futures-util = "0.3.14"
futures = "0.3.14"
tokio = {version = "0.2.*", features = ["full"] }
indicatif = "0.15.0"
main_error = "0.1.1"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
rustyline = "*"
rustyline-derive= "*"
regex = "*"
shell-words = "*"
discid = "0.4.4"
md5="*"
#ffmpeg = "*"
